update result and timer

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
     cupertino_icons: ^1.0.2
     http: ^1.1.2
     file_picker: ^6.1.1
+    timer_count_down: ^2.2.2
 
 dev_dependencies:
     flutter_test:
